# GENesis-AGI

./: .claudeignore  .genesis-hook-versions  .genesis-source-commit  .gitignore  .gitleaks.toml  .gitnexusrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOURNAL.md  LICENSE  README.md  RELEASE_DRAFT.md  SECURITY.md  SETUP.md  SOUL.md  VERSION  agent.yaml  env.example  genesis-container-setup.md  pyproject.toml  secrets.env.example
.claude/: settings.json  settings.local.json
.claude/agents/: genesis-architect.md  genesis-codebase-mapper.md  genesis-investigator.md  genesis-researcher.md  genesis-security-reviewer.md
.claude/commands/: activate-browser.md  audit-changes.md  challenge.md  drift.md  evaluate.md  genesis.md  setup.md  shelve.md  task.md  unshelve.md  user-evaluate.md
.claude/docs/: agent-zero-integration.md  architecture-index.md  background-sessions.md  build-phase-current.md  builder-workflow-integrations.md  code-intelligence-guide.md  code-intelligence.md  concurrent-sessions.md  confidence-framework.md  dual-repo.md  mcp-tools-guide.md  observability-rules.md  proactive-memory-hook.md  serena-guide.md  testing-patterns.md  web-tools-guide.md  your-genesis.md
.claude/hooks/: README.md  cbm-discovery-gate.sh  cbm-session-reminder.sh  cc-deploy-timeout-guard  genesis-hook
.claude/mcp/: run-codebase-memory  run-mcp-server
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  public-release.yaml
.serena/: project.yml
az_plugins/genesis/: api_health.py  plugin.yaml
az_plugins/genesis-memory/: plugin.yaml
config/: 60-ioscheduler.rules  99-container-host.conf  autonomous_cli_policy.yaml  autonomy.yaml  autonomy_rules.yaml  az-pip-constraints.txt  cc-global-settings.yaml  cc_foreground_reaper.yaml  cc_rate_limit_resume.yaml  cc_roster.yaml  channels.yaml  claude-settings.json.template  confidence_gates.yaml  content_sanitization.yaml  contribution.yaml  ego.yaml  entity_adjudication.yaml  genesis-bridge.service  genesis-guardian-watchman.service  genesis-guardian-watchman.timer  genesis-guardian.service  genesis-guardian.timer  genesis-tmp-watchgod.service  genesis-watchdog.service  genesis-watchdog.timer  genesis.yaml.example  github_discovery_topics.yaml  guardian-claude.md  guardian.yaml  inbox_monitor.yaml  learned_knobs.yaml  mail_monitor.yaml  mcp.json.template  memory_recall.yaml  model_profiles.yaml  model_routing.yaml  observability.yaml  omi_config.yaml.example  openclaw-example.json5  operator-claude.md  (+20 more)
config/behavioral_rules/: no_hide_problems.yaml  no_prompt_injection.yaml  no_unguarded_kill.yaml
config/eval_datasets/: classification.yaml  extraction.yaml  structured_output.yaml
config/gstack-patches/: README.md  codex-SKILL.md  codex-SKILL.md.tmpl  review-checklist.md
config/modules/: automaton-supervisor.yaml  career.yaml  content-pipeline.yaml  crypto-ops.yaml  example.yaml.template  prediction-markets.yaml
config/voice-pe/: secrets.yaml.example  voice_pe_config.yaml
docs/: INDEX.md  ego-philosophy.md  genesis-architecture-interactive.html  genesis-vs-claude-md.md
docs/actions/: README.md
docs/architecture/: CURRENT.md  autonomy-deep-dive.md  campaign-intelligent-cadence.md  enforcement-spectrum.md  genesis-agent-zero-integration.md  genesis-deferred-integrations.md  genesis-knowledge-autonomy.md  genesis-module-paradigm.md  genesis-v3-autonomous-behavior-design.md  genesis-v3-build-phases.md  genesis-v3-builder-claude-md.md  genesis-v3-capability-layer-addendum.md  genesis-v3-dual-engine-plan.md  genesis-v3-gap-assessment.md  genesis-v3-memory-collections.md  genesis-v3-model-routing-registry.md  genesis-v3-procedure-activation.md  genesis-v3-resilience-architecture.md  genesis-v3-resilience-patterns.md  genesis-v3-self-healing-design.md  genesis-v3-survivable-architecture.md  genesis-v3-vision.md  genesis-v4-architecture.md  genesis-v5-architecture.md  memory-deep-dive.md  memory-quality-scope.md  post-v3-knowledge-pipeline.md  routing-deep-dive.md  update-minimal-downtime-design.md
docs/case-studies/: deep-research.md  earned-autonomy.md  hybrid-memory.md  multi-provider-routing.md
docs/decisions/: 001-ego-ephemeral.md  002-surplus-direct-router.md  003-no-salience-gate-reflections.md  004-memory-wings-rooms.md  005-no-silent-timeouts.md  006-router-dead-letter.md  007-llm-first-judgment.md  README.md
scripts/: ambient_awareness_worker.py  ambient_replay.py  analyze_slop.py  apply_entity_seed.py  apply_gstack_patches.sh  apply_qdrant_payload_indexes.py  attention_snapshot_gc.py  backfill_memory_class.py  backfill_memory_taxonomy.py  backfill_observation_embeddings.py  backfill_observation_ttls.py  backfill_origin_class_qdrant.py  backfill_procedure_embeddings.py  backfill_qdrant_metadata.py  backfill_session_charters.py  backfill_session_memories.py  backfill_source_subsystem.py  backup.sh  backup_cc_memory.sh  bash_safety_hook.sh  behavioral_linter.py  bootstrap.sh  browser.py  capture_recovery_state.sh  cc-slot.sh  cc_align_host.sh  check_cc_node_lockstep.py  check_external_io.py  check_hook_versions.sh  check_portability.sh  check_stale_pending.py  check_subsystem_map.py  cleanup-stale-branches.sh  cleanup_fenced_knowledge_units.py  cleanup_pipeline_noise.py  cleanup_subsystem_qdrant.py  code_intel_freeze.sh  code_intel_runner.sh  content_safety_hook.py  contribution_offer_hook.py  (+85 more)
src/genesis/channels/voice/s2s_bridge/: Dockerfile  config.yaml  pyproject.toml  repository.json
src/genesis/channels/voice/s2s_bridge/app/: genesis_tool_service.py  interrupt_relay.py  main.py  raw_audio_serializer.py  session_manager.py  websocket_handler.py
src/genesis/channels/voice/s2s_bridge/root/: run.sh
tests/: conftest.py  test_config_overlay.py  test_conftest_sys_path_guard.py  test_env.py  test_health_data.py  test_health_mcp.py  test_intent_trail.py  test_observation_consumption.py  test_smoke.py  test_tts_comprehensive.py  test_tts_config.py  test_voice_delivery.py
(+2624 files in other folders)
