[project]
name = "genesis-v3"
version = "3.0.0a1"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite",
    "aiohttp",
    "apscheduler>=3.11,<4",
    "python-telegram-bot>=21.0",
    "litellm==1.78.7",  # pinned — 1.82.7/1.82.8 contain malware; CVE-2026-35030/35029 not exploitable
                       # (Genesis uses acompletion/completion_cost only, no proxy server or OIDC)
    "qdrant-client",
    "pyyaml",
    "httpx",
    "diskcache>=5.6",
    "beautifulsoup4",
    "html2text",
    "lxml",
    "flask>=3.0",
    "flask-sock>=0.7",
    "wsproto>=1.2",  # transitive dep of flask-sock; pin to prevent silent uninstall
    "fastmcp>=2.0,<3.0",  # 3.x has breaking API changes; CVE-2026-32871/27124/2025-64340 not exploitable
                         # (Genesis uses stdio transport only, no OpenAPI/OAuth/CLI features)
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio",
    "aioresponses",
]
browser = [
    "playwright>=1.40",
    "camoufox>=0.4",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (catches common gotchas)
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
