[tool.poetry]
name = "genesis-voice-bridge"
version = "0.2.0"
description = "Genesis voice bridge addon — bidirectional voice via OpenAI Realtime API with WebSocket support"
authors = ["Genesis <noreply@github.com>"]
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pipecat-ai = {extras = ["openai", "websocket"], version = "==0.0.97"}
python-dotenv = ">=1.0.0"
httpx = ">=0.24.0"
websockets = ">=13.0"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
